added reviews page and updated navigation links

--- a/catalog.html
+++ b/catalog.html
@@ -12,6 +12,7 @@
         <a href="index.html">Главная</a>
         <a href="catalog.html">Каталог</a>
         <a href="contact.html">Контакты</a>
+        <a href="reviews.html">Отзывы</a>
       </nav>
     </header>
 
@@ -42,3 +43,4 @@
     </footer>
   </body>
 </html>
+
