flexbox+grid+additional info to main page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,82 @@
         class="rounded-img"
       />
     </section>
+    <section class="features">
+      <h2>Почему выбирают MangaLib?</h2>
+      <div class="catalog">
+        <article class="manga-card">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Manga_%283%29.jpg"
+            alt="Библиотека"
+          />
+          <h3>Большая коллекция</h3>
+          <p>
+            Доступ к сотням популярных и редких манг на русском и английском
+            языках.
+          </p>
+        </article>
+        <article class="manga-card">
+          <img
+            src="https://a.storyblok.com/f/178900/680x412/85aeb5f6c1/jujutsu-kaisen-modulo.jpeg/m/576x0/filters:quality(95)format(webp)"
+            alt="Обновления"
+          />
+          <h3>Регулярные обновления</h3>
+          <p>
+            Новые главы добавляются каждую неделю — следи за любимыми историями.
+          </p>
+        </article>
+        <article class="manga-card">
+          <img src="https://i.redd.it/x3ygle8q5rge1.jpeg" alt="Сообщество" />
+          <h3>Активное сообщество</h3>
+          <p>Обсуждай мангу с другими читателями и оставляй свои отзывы.</p>
+        </article>
+      </div>
+    </section>
 
+    <section class="gallery">
+      <div class="gallery-item">
+        <img
+          src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+          alt="Манга 1"
+        />
+        <span>Манга 1</span>
+      </div>
+      <div class="gallery-item">
+        <img
+          src="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
+          alt="Манга 2"
+        />
+        <span>Манга 2</span>
+      </div>
+      <div class="gallery-item">
+        <img
+          src="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
+          alt="Манга 3"
+        />
+        <span>Манга 3</span>
+      </div>
+      <div class="gallery-item">
+        <img
+          src="https://i.pinimg.com/originals/b5/95/cd/b595cd563f140140d5e8f97dbdf320fd.png"
+          alt="Манга 4"
+        />
+        <span>Манга 4</span>
+      </div>
+      <div class="gallery-item">
+        <img
+          src="https://c8.alamy.com/comp/B0RY8N/cover-artwork-of-japanese-manga-comic-book-in-japan-B0RY8N.jpg"
+          alt="Манга 5"
+        />
+        <span>Манга 5</span>
+      </div>
+      <div class="gallery-item">
+        <img
+          src="https://w0.peakpx.com/wallpaper/617/107/HD-wallpaper-berserk-french-cover-berserk-cover-art-manga.jpg"
+          alt="Манга 6"
+        />
+        <span>Манга 6</span>
+      </div>
+    </section>
     <footer>
       <p>Abdrakhmanov Daniyar & Boranbayev Danial | SE-2408</p>
     </footer>
