--- a/index.html
+++ b/index.html
@@ -3,108 +3,235 @@
   <head>
     <meta charset="UTF-8" />
     <title>MangaLib - Главная</title>
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Твои кастомные стили -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header id="top-banner">
-      <h1 class="header-section">Добро пожаловать в MangaLib</h1>
-      <nav class="main-nav">
-        <a href="index.html">Главная</a>
-        <a href="catalog.html">Каталог</a>
-        <a href="contact.html">Контакты</a>
-        <a href="reviews.html">Отзывы</a>
-      </nav>
-    </header>
 
-    <section class="intro">
-      <h2>Что такое MangaLib?</h2>
-      <p class="highlighted-text">
+  <body class="d-flex flex-column min-vh-100 bg-light">
+    <!--  Navbar  -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="#">📚 MangaLib</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="catalog.html">Каталог</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Контакты</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="reviews.html">Отзывы</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--  Carousel  -->
+    <div
+      id="mangaCarousel"
+      class="carousel slide carousel-fade mt-4"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+            class="d-block w-100"
+            alt="Манга 1"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
+            class="d-block w-100"
+            alt="Манга 2"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
+            class="d-block w-100"
+            alt="Манга 3"
+          />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#mangaCarousel"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#mangaCarousel"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+
+    <!--  Intro Section  -->
+    <section class="container text-center my-5">
+      <h2 class="fw-bold">Что такое MangaLib?</h2>
+      <p class="text-danger fw-semibold">
         MangaLib — это ваша онлайн-библиотека манги.
       </p>
       <img
         src="https://play-lh.googleusercontent.com/8TTnDwRV5-bxH4Rb_Nlfts1emEBeEpNuTWBP9KVJCJAmXW9jzXlDv0_aqOzjXIq5oQ-L"
         alt="Обложка манги"
-        class="rounded-img"
+        class="rounded-circle img-fluid my-3"
+        style="max-width: 250px"
       />
     </section>
-    <section class="features">
-      <h2>Почему выбирают MangaLib?</h2>
-      <div class="catalog">
-        <article class="manga-card">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Manga_%283%29.jpg"
-            alt="Библиотека"
-          />
-          <h3>Большая коллекция</h3>
-          <p>
-            Доступ к сотням популярных и редких манг на русском и английском
-            языках.
-          </p>
-        </article>
-        <article class="manga-card">
-          <img
-            src="https://a.storyblok.com/f/178900/680x412/85aeb5f6c1/jujutsu-kaisen-modulo.jpeg/m/576x0/filters:quality(95)format(webp)"
-            alt="Обновления"
-          />
-          <h3>Регулярные обновления</h3>
-          <p>
-            Новые главы добавляются каждую неделю — следи за любимыми историями.
-          </p>
-        </article>
-        <article class="manga-card">
-          <img src="https://i.redd.it/x3ygle8q5rge1.jpeg" alt="Сообщество" />
-          <h3>Активное сообщество</h3>
-          <p>Обсуждай мангу с другими читателями и оставляй свои отзывы.</p>
-        </article>
+
+    <!--  Features Section (Bootstrap Grid + Cards)  -->
+    <section class="container my-5">
+      <h2 class="text-center mb-4 fw-bold">Почему выбирают MangaLib?</h2>
+
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Manga_%283%29.jpg"
+              class="card-img-top"
+              alt="Библиотека"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Большая коллекция</h5>
+              <p class="card-text">
+                Доступ к сотням популярных и редких манг на русском и английском
+                языках.
+              </p>
+            </div>
+            <div class="card-footer text-center">
+              <a href="catalog.html" class="btn btn-primary btn-sm">Перейти</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="https://a.storyblok.com/f/178900/680x412/85aeb5f6c1/jujutsu-kaisen-modulo.jpeg/m/576x0/filters:quality(95)format(webp)"
+              class="card-img-top"
+              alt="Обновления"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Регулярные обновления</h5>
+              <p class="card-text">
+                Новые главы добавляются каждую неделю — следи за любимыми
+                историями.
+              </p>
+            </div>
+            <div class="card-footer text-center">
+              <a href="catalog.html" class="btn btn-primary btn-sm">Читать</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="https://i.redd.it/x3ygle8q5rge1.jpeg"
+              class="card-img-top"
+              alt="Сообщество"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Активное сообщество</h5>
+              <p class="card-text">
+                Обсуждай мангу с другими читателями и оставляй свои отзывы.
+              </p>
+            </div>
+            <div class="card-footer text-center">
+              <a href="reviews.html" class="btn btn-primary btn-sm">Отзывы</a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section class="gallery">
-      <div class="gallery-item">
-        <img
-          src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
-          alt="Манга 1"
-        />
-        <span>Манга 1</span>
-      </div>
-      <div class="gallery-item">
-        <img
-          src="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
-          alt="Манга 2"
-        />
-        <span>Манга 2</span>
-      </div>
-      <div class="gallery-item">
-        <img
-          src="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
-          alt="Манга 3"
-        />
-        <span>Манга 3</span>
-      </div>
-      <div class="gallery-item">
-        <img
-          src="https://i.pinimg.com/originals/b5/95/cd/b595cd563f140140d5e8f97dbdf320fd.png"
-          alt="Манга 4"
-        />
-        <span>Манга 4</span>
-      </div>
-      <div class="gallery-item">
-        <img
-          src="https://c8.alamy.com/comp/B0RY8N/cover-artwork-of-japanese-manga-comic-book-in-japan-B0RY8N.jpg"
-          alt="Манга 5"
-        />
-        <span>Манга 5</span>
-      </div>
-      <div class="gallery-item">
-        <img
-          src="https://w0.peakpx.com/wallpaper/617/107/HD-wallpaper-berserk-french-cover-berserk-cover-art-manga.jpg"
-          alt="Манга 6"
-        />
-        <span>Манга 6</span>
+    <!--  Gallery Grid (Bootstrap Responsive Columns)  -->
+    <section class="container my-5">
+      <h2 class="text-center mb-4 fw-bold">Галерея Манги</h2>
+      <div class="row g-3">
+        <div class="col-6 col-md-4 col-lg-2">
+          <img
+            src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+            class="img-fluid rounded shadow-sm"
+            alt="Манга 1"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-2">
+          <img
+            src="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
+            class="img-fluid rounded shadow-sm"
+            alt="Манга 2"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-2">
+          <img
+            src="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
+            class="img-fluid rounded shadow-sm"
+            alt="Манга 3"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-2">
+          <img
+            src="https://i.pinimg.com/originals/b5/95/cd/b595cd563f140140d5e8f97dbdf320fd.png"
+            class="img-fluid rounded shadow-sm"
+            alt="Манга 4"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-2">
+          <img
+            src="https://c8.alamy.com/comp/B0RY8N/cover-artwork-of-japanese-manga-comic-book-in-japan-B0RY8N.jpg"
+            class="img-fluid rounded shadow-sm"
+            alt="Манга 5"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-2">
+          <img
+            src="https://w0.peakpx.com/wallpaper/617/107/HD-wallpaper-berserk-french-cover-berserk-cover-art-manga.jpg"
+            class="img-fluid rounded shadow-sm"
+            alt="Манга 6"
+          />
+        </div>
       </div>
     </section>
-    <footer>
-      <p>Abdrakhmanov Daniyar & Boranbayev Danial | SE-2408</p>
+
+    <!--  Footer  -->
+    <footer class="bg-dark text-white text-center py-3 mt-auto">
+      Abdrakhmanov Daniyar &amp; Boranbayev Danial | SE-2408
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
