--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <title>MangaLib - Контакты</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="top-banner">
-      <h1 class="header-section">Связаться с нами</h1>
-      <nav class="main-nav">
-        <a href="index.html">Главная</a>
-        <a href="catalog.html">Каталог</a>
-        <a href="contact.html">Контакты</a>
-        <a href="reviews.html">Отзывы</a>
-      </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">📚 MangaLib</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="catalog.html">Каталог</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Контакты</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="reviews.html">Отзывы</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <section class="contact-form">
       <h2>Обратная связь</h2>
@@ -35,5 +63,6 @@
     <footer>
       <p>Abdrakhmanov Daniyar & Boranbayev Danial | SE-2408</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
