--- a/contact.html
+++ b/contact.html
@@ -39,22 +39,44 @@
             <li class="nav-item">
               <a class="nav-link" href="reviews.html">Отзывы</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <section class="contact-form">
-      <h2>Обратная связь</h2>
-      <form>
-        <label for="name">Имя:</label>
-        <input type="text" id="name" />
+    <section class="contact-form container my-5">
+      <h2>Свяжитесь с нами</h2>
+      <form id="contactForm" novalidate>
+        <div class="form-error" style="display: none"></div>
+        <div
+          class="form-success"
+          style="display: none; color: #137333; margin: 8px 0"
+        ></div>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" />
+        <label>Имя</label>
+        <input type="text" id="name" placeholder="Иван Иванов" required />
 
-        <label for="message">Сообщение:</label>
-        <textarea id="message"></textarea>
+        <label>Email</label>
+        <input type="email" id="email" placeholder="name@mail.com" required />
+
+        <label>Пароль</label>
+        <input
+          type="password"
+          id="password"
+          placeholder="Минимум 6 символов"
+          required
+        />
+
+        <label>Подтвердите пароль</label>
+        <input
+          type="password"
+          id="confirm"
+          placeholder="Повторите пароль"
+          required
+        />
 
         <button type="submit">Отправить</button>
       </form>
@@ -64,5 +86,7 @@
       <p>Abdrakhmanov Daniyar & Boranbayev Danial | SE-2408</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
