--- a/catalog.html
+++ b/catalog.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" href="reviews.html">Отзывы</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
           </ul>
         </div>
       </div>
