--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <li class="nav-item">
               <a class="nav-link" href="reviews.html">Отзывы</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -225,7 +228,8 @@
         </div>
       </div>
     </section>
-
+    
+    
     <!--  Footer  -->
     <footer class="bg-dark text-white text-center py-3 mt-auto">
       Abdrakhmanov Daniyar &amp; Boranbayev Danial | SE-2408
@@ -233,5 +237,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
