--- a/catalog.html
+++ b/catalog.html
@@ -119,6 +119,11 @@
         </div>
       </div>
     </main>
+    <div class="text-center mb-4">
+      <button id="loadMore" class="btn btn-outline-primary">
+        Показать ещё
+      </button>
+    </div>
     <!--  Footer  -->
     <footer class="bg-dark text-white text-center py-3 mt-auto">
       Abdrakhmanov Daniyar &amp; Boranbayev Danial | SE-2408
@@ -126,5 +131,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="catalog.js"></script>
   </body>
 </html>
