--- a/faq.html
+++ b/faq.html
@@ -116,8 +116,11 @@
               Что такое MangaLib?
             </button>
             <div class="content">
-              <p class="mb-0">blablabla</p>
+              <p class="mb-0">blablabla?</p>
+              <p class="mb-0">lalalala.</p>
+
             </div>
+            
           </div>
         </div>
       </section>
