--- a/contact.html
+++ b/contact.html
@@ -88,5 +88,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="script.js"></script>
+    <script defer src="contact.js"></script>
   </body>
 </html>
