--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8" />
     <title>MangaLib - Главная</title>
 
-    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
-    <!-- Твои кастомные стили -->
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body class="d-flex flex-column min-vh-100 bg-light">
+  <body class="d-flex flex-column min-vh-100 bg-light" data-page="index">
     <!--  Navbar  -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -32,7 +30,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto" id="mainNav">
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Главная</a>
             </li>
@@ -49,6 +47,28 @@
               <a class="nav-link" href="faq.html">FAQ</a>
             </li>
           </ul>
+
+          <!-- 2D: Switch Statement-->
+          <div class="d-flex align-items-center gap-2 ms-lg-3 mt-3 mt-lg-0">
+            <label class="text-white-50 small mb-0" for="langSelect"
+              >Язык</label
+            >
+            <select id="langSelect" class="form-select form-select-sm w-auto">
+              <option value="ru" selected>RU</option>
+              <option value="en">EN</option>
+              <option value="kz">KZ</option>
+            </select>
+
+            <!-- Dynamic Style Changes -->
+            <button
+              id="themeToggle"
+              class="btn btn-outline-light btn-sm"
+              type="button"
+              aria-pressed="false"
+            >
+              🌙 Тема
+            </button>
+          </div>
         </div>
       </div>
     </nav>
@@ -102,8 +122,10 @@
 
     <!--  Intro Section  -->
     <section class="container text-center my-5">
-      <h2 class="fw-bold">Что такое MangaLib?</h2>
-      <p class="text-danger fw-semibold">
+      <!-- Switch Statement
+          -->
+      <h2 class="fw-bold" id="i18n-whatIsTitle">Что такое MangaLib?</h2>
+      <p class="text-danger fw-semibold" id="i18n-whatIsSubtitle">
         MangaLib — это ваша онлайн-библиотека манги.
       </p>
       <img
@@ -115,129 +137,173 @@
     </section>
 
     <!--  Features Section (Bootstrap Grid + Cards)  -->
+    <!-- Animations
+         -->
     <section class="container my-5">
-      <h2 class="text-center mb-4 fw-bold">Почему выбирают MangaLib?</h2>
+      <h2 class="text-center mb-4 fw-bold" id="i18n-whyTitle">
+        Почему выбирают MangaLib?
+      </h2>
 
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
-          <div class="card h-100 shadow-sm">
+          <div class="card h-100 shadow-sm animate-in">
             <img
               src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Manga_%283%29.jpg"
               class="card-img-top"
               alt="Библиотека"
             />
             <div class="card-body">
-              <h5 class="card-title">Большая коллекция</h5>
-              <p class="card-text">
+              <h5 class="card-title" id="i18n-card1Title">Большая коллекция</h5>
+              <p class="card-text" id="i18n-card1Text">
                 Доступ к сотням популярных и редких манг на русском и английском
                 языках.
               </p>
             </div>
             <div class="card-footer text-center">
-              <a href="catalog.html" class="btn btn-primary btn-sm">Перейти</a>
+              <a
+                href="catalog.html"
+                class="btn btn-primary btn-sm"
+                id="i18n-card1Cta"
+                >Перейти</a
+              >
             </div>
           </div>
         </div>
 
         <div class="col">
-          <div class="card h-100 shadow-sm">
+          <div class="card h-100 shadow-sm animate-in">
             <img
               src="https://a.storyblok.com/f/178900/680x412/85aeb5f6c1/jujutsu-kaisen-modulo.jpeg/m/576x0/filters:quality(95)format(webp)"
               class="card-img-top"
               alt="Обновления"
             />
             <div class="card-body">
-              <h5 class="card-title">Регулярные обновления</h5>
-              <p class="card-text">
+              <h5 class="card-title" id="i18n-card2Title">
+                Регулярные обновления
+              </h5>
+              <p class="card-text" id="i18n-card2Text">
                 Новые главы добавляются каждую неделю — следи за любимыми
                 историями.
               </p>
             </div>
             <div class="card-footer text-center">
-              <a href="catalog.html" class="btn btn-primary btn-sm">Читать</a>
+              <a
+                href="catalog.html"
+                class="btn btn-primary btn-sm"
+                id="i18n-card2Cta"
+                >Читать</a
+              >
             </div>
           </div>
         </div>
 
         <div class="col">
-          <div class="card h-100 shadow-sm">
+          <div class="card h-100 shadow-sm animate-in">
             <img
               src="https://i.redd.it/x3ygle8q5rge1.jpeg"
               class="card-img-top"
               alt="Сообщество"
             />
             <div class="card-body">
-              <h5 class="card-title">Активное сообщество</h5>
-              <p class="card-text">
+              <h5 class="card-title" id="i18n-card3Title">
+                Активное сообщество
+              </h5>
+              <p class="card-text" id="i18n-card3Text">
                 Обсуждай мангу с другими читателями и оставляй свои отзывы.
               </p>
             </div>
             <div class="card-footer text-center">
-              <a href="reviews.html" class="btn btn-primary btn-sm">Отзывы</a>
+              <a
+                href="reviews.html"
+                class="btn btn-primary btn-sm"
+                id="i18n-card3Cta"
+                >Отзывы</a
+              >
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!--  Gallery Grid (Bootstrap Responsive Columns)  -->
+    <!--  Gallery Grid -->
     <section class="container my-5">
       <h2 class="text-center mb-4 fw-bold">Галерея Манги</h2>
+      <!-- Manipulating Attributes
+           -->
+      <div class="mb-3 text-center">
+        <img
+          id="heroImage"
+          src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+          alt="Большой постер"
+          class="img-fluid rounded shadow"
+          style="max-height: 360px; object-fit: cover"
+        />
+      </div>
+
       <div class="row g-3">
         <div class="col-6 col-md-4 col-lg-2">
           <img
             src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
-            class="img-fluid rounded shadow-sm"
+            data-full="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+            class="img-fluid rounded shadow-sm thumb"
             alt="Манга 1"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
             src="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
-            class="img-fluid rounded shadow-sm"
+            data-full="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
+            class="img-fluid rounded shadow-sm thumb"
             alt="Манга 2"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
             src="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
-            class="img-fluid rounded shadow-sm"
+            data-full="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
+            class="img-fluid rounded shadow-sm thumb"
             alt="Манга 3"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
             src="https://i.pinimg.com/originals/b5/95/cd/b595cd563f140140d5e8f97dbdf320fd.png"
-            class="img-fluid rounded shadow-sm"
+            data-full="https://i.pinimg.com/originals/b5/95/cd/b595cd563f140140d5e8f97dbdf320fd.png"
+            class="img-fluid rounded shadow-sm thumb"
             alt="Манга 4"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
             src="https://c8.alamy.com/comp/B0RY8N/cover-artwork-of-japanese-manga-comic-book-in-japan-B0RY8N.jpg"
-            class="img-fluid rounded shadow-sm"
+            data-full="https://c8.alamy.com/comp/B0RY8N/cover-artwork-of-japanese-manga-comic-book-in-japan-B0RY8N.jpg"
+            class="img-fluid rounded shadow-sm thumb"
             alt="Манга 5"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
             src="https://w0.peakpx.com/wallpaper/617/107/HD-wallpaper-berserk-french-cover-berserk-cover-art-manga.jpg"
-            class="img-fluid rounded shadow-sm"
+            data-full="https://w0.peakpx.com/wallpaper/617/107/HD-wallpaper-berserk-french-cover-berserk-cover-art-manga.jpg"
+            class="img-fluid rounded shadow-sm thumb"
             alt="Манга 6"
           />
         </div>
       </div>
     </section>
-    
-    
+
     <!--  Footer  -->
     <footer class="bg-dark text-white text-center py-3 mt-auto">
       Abdrakhmanov Daniyar &amp; Boranbayev Danial | SE-2408
     </footer>
 
+    <audio id="uiSound" src="assets/click.mp3" preload="auto"></audio>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- [Поведение] весь JS в одном файле, без инлайна -->
     <script src="script.js"></script>
+    <script defer src="index-features.js"></script>
   </body>
 </html>
