--- a/catalog.html
+++ b/catalog.html
@@ -9,6 +9,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="js/jquery-setup.js"></script>
+    <script defer src="js/jquery-search.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -48,10 +51,38 @@
             </li>
           </ul>
         </div>
+
+        <div class="d-flex align-items-center gap-2 ms-lg-3 mt-3 mt-lg-0">
+          <label class="text-white-50 small mb-0" for="langSelect">Язык</label>
+          <select id="langSelect" class="form-select form-select-sm w-auto">
+            <option value="ru" selected>RU</option>
+            <option value="en">EN</option>
+            <option value="kz">KZ</option>
+          </select>
+
+          <!-- Dynamic Style Changes -->
+          <button
+            id="themeToggle"
+            class="btn btn-outline-light btn-sm"
+            type="button"
+            aria-pressed="false"
+          >
+            🌙 Тема
+          </button>
+        </div>
       </div>
     </nav>
 
     <!--  Bootstrap Cards Section  -->
+    <div class="container position-relative mt-3">
+      <input
+        id="searchInput"
+        class="form-control mb-2"
+        placeholder="Поиск манги..."
+      />
+      <ul id="suggestions" class="list-group position-absolute w-100"></ul>
+    </div>
+
     <main class="flex-grow-1 py-5 bg-light">
       <div class="container">
         <h2 class="text-center mb-4">Каталог Манги</h2>
@@ -66,7 +97,7 @@
                 alt="Манга Наруто"
               />
               <div class="card-body">
-                <h5 class="card-title">Наруто</h5>
+                <h5 class="card-title">Naruto</h5>
                 <p class="card-text">
                   История молодого ниндзя, мечтающего стать хокаге.
                 </p>
@@ -133,5 +164,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="catalog.js"></script>
+    <script src="index-features.js"></script>
+
   </body>
 </html>
