--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="js/jquery-setup.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -43,6 +45,25 @@
               <a class="nav-link" href="faq.html">FAQ</a>
             </li>
           </ul>
+        </div>
+
+        <div class="d-flex align-items-center gap-2 ms-lg-3 mt-3 mt-lg-0">
+          <label class="text-white-50 small mb-0" for="langSelect">Язык</label>
+          <select id="langSelect" class="form-select form-select-sm w-auto">
+            <option value="ru" selected>RU</option>
+            <option value="en">EN</option>
+            <option value="kz">KZ</option>
+          </select>
+
+          <!-- Dynamic Style Changes -->
+          <button
+            id="themeToggle"
+            class="btn btn-outline-light btn-sm"
+            type="button"
+            aria-pressed="false"
+          >
+            🌙 Тема
+          </button>
         </div>
       </div>
     </nav>
@@ -89,5 +110,7 @@
 
     <script src="script.js"></script>
     <script defer src="contact.js"></script>
+    <script defer src="js/contact-jquery.js"></script>
+    <script src="index-features.js"></script>
   </body>
 </html>
