--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="js/jquery-setup.js"></script>
+    <script defer src="js/jquery-ux.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -288,6 +290,27 @@
             class="img-fluid rounded shadow-sm thumb"
             alt="Манга 6"
           />
+        </div>
+      </div>
+    </section>
+
+    <section class="stats-section text-center py-5 bg-white">
+      <div class="container">
+        <h2 class="fw-bold mb-4">Наши достижения</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <h3>
+              <span class="count-num" data-target="1500">0</span> пользователей
+            </h3>
+          </div>
+          <div class="col-md-4">
+            <h3>
+              <span class="count-num" data-target="320">0</span> манг в каталоге
+            </h3>
+          </div>
+          <div class="col-md-4">
+            <h3><span class="count-num" data-target="85">0</span> отзывов</h3>
+          </div>
         </div>
       </div>
     </section>
