--- a/reviews.html
+++ b/reviews.html
@@ -7,6 +7,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="js/jquery-setup.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -44,8 +46,29 @@
             </li>
           </ul>
         </div>
+
+        <div class="d-flex align-items-center gap-2 ms-lg-3 mt-3 mt-lg-0">
+          <label class="text-white-50 small mb-0" for="langSelect">Язык</label>
+          <select id="langSelect" class="form-select form-select-sm w-auto">
+            <option value="ru" selected>RU</option>
+            <option value="en">EN</option>
+            <option value="kz">KZ</option>
+          </select>
+
+          <!-- Dynamic Style Changes -->
+          <button
+            id="themeToggle"
+            class="btn btn-outline-light btn-sm"
+            type="button"
+            aria-pressed="false"
+          >
+            🌙 Тема
+          </button>
+        </div>
       </div>
     </nav>
+
+    <img data-src="bigimage.jpg" alt="Preview" width="300" />
 
     <main class="container">
       <section aria-labelledby="reviews-heading">
@@ -183,5 +206,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="index-features.js"></script>
   </body>
 </html>
