--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,9 @@
             <li class="nav-item">
               <a class="nav-link" href="reviews.html">Отзывы</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
+            </li> -->
           </ul>
         </div>
 
@@ -97,6 +97,15 @@
           id="confirm"
           placeholder="Повторите пароль"
           required
+        />
+        <br>
+        <br>
+        <label>Промокод (необязательно)</label>
+        <input
+          type="text"
+          id="promo"
+          placeholder="Введите промокод"
+          value="MANGA2025"
         />
 
         <button type="submit">Отправить</button>
