--- a/catalog.html
+++ b/catalog.html
@@ -46,9 +46,9 @@
             <li class="nav-item">
               <a class="nav-link" href="reviews.html">Отзывы</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
+            </li> -->
           </ul>
         </div>
 
@@ -88,8 +88,7 @@
         <h2 class="text-center mb-4">Каталог Манги</h2>
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-          <!-- Card 1 -->
-          <div class="col">
+          <!-- <div class="col">
             <div class="card h-100 shadow-sm">
               <img
                 src="https://simg.marwin.kz/media/catalog/product/cache/8d1771fdd19ec2393e47701ba45e606d/3/0/kisimoto_m_naruto_kniga_1.jpg"
@@ -108,7 +107,6 @@
             </div>
           </div>
 
-          <!-- Card 2 -->
           <div class="col">
             <div class="card h-100 shadow-sm">
               <img
@@ -128,7 +126,6 @@
             </div>
           </div>
 
-          <!-- Card 3 -->
           <div class="col">
             <div class="card h-100 shadow-sm">
               <img
@@ -146,7 +143,7 @@
                 <button class="btn btn-primary btn-sm">Читать</button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
@@ -165,6 +162,7 @@
 
     <script src="catalog.js"></script>
     <script src="index-features.js"></script>
+    <script src="js/manga-api.js"></script>
 
   </body>
 </html>
