--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <li class="nav-item">
               <a class="nav-link" href="reviews.html">Отзывы</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
+            </li> -->
           </ul>
 
           <!-- 2D: Switch Statement-->
@@ -325,7 +325,6 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- [Поведение] весь JS в одном файле, без инлайна -->
     <script src="script.js"></script>
     <script defer src="index-features.js"></script>
   </body>
