--- a/reviews.html
+++ b/reviews.html
@@ -41,9 +41,9 @@
             <li class="nav-item">
               <a class="nav-link" href="reviews.html">Отзывы</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
-            </li>
+            </li> -->
           </ul>
         </div>
 
