--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img
-            src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+            src="images/onepiece.jpg"
             class="d-block w-100"
             alt="Манга 1"
           />
         </div>
         <div class="carousel-item">
           <img
-            src="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
+            src="images/berserko.jpg"
             class="d-block w-100"
             alt="Манга 2"
           />
         </div>
         <div class="carousel-item">
           <img
-            src="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
+            src="images/anime.jpeg"
             class="d-block w-100"
             alt="Манга 3"
           />
@@ -150,7 +150,7 @@
         <div class="col">
           <div class="card h-100 shadow-sm animate-in">
             <img
-              src="https://upload.wikimedia.org/wikipedia/commons/3/3d/Manga_%283%29.jpg"
+              src="images/manga1.jpg"
               class="card-img-top"
               alt="Библиотека"
             />
@@ -175,7 +175,7 @@
         <div class="col">
           <div class="card h-100 shadow-sm animate-in">
             <img
-              src="https://a.storyblok.com/f/178900/680x412/85aeb5f6c1/jujutsu-kaisen-modulo.jpeg/m/576x0/filters:quality(95)format(webp)"
+              src="images/scenery.jpg"
               class="card-img-top"
               alt="Обновления"
             />
@@ -202,7 +202,7 @@
         <div class="col">
           <div class="card h-100 shadow-sm animate-in">
             <img
-              src="https://i.redd.it/x3ygle8q5rge1.jpeg"
+              src="images/social.jpeg"
               class="card-img-top"
               alt="Сообщество"
             />
@@ -235,7 +235,7 @@
       <div class="mb-3 text-center">
         <img
           id="heroImage"
-          src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+          src="images/berserko.jpg"
           alt="Большой постер"
           class="img-fluid rounded shadow"
           style="max-height: 360px; object-fit: cover"
@@ -245,48 +245,48 @@
       <div class="row g-3">
         <div class="col-6 col-md-4 col-lg-2">
           <img
-            src="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
-            data-full="https://i.pinimg.com/originals/7d/f5/b0/7df5b0481d7d4c0dee7b7027161f9c1f.png"
+            src="images/onepiece.jpg"
+            data-full="images/onepiece.jpg"
             class="img-fluid rounded shadow-sm thumb"
             alt="Манга 1"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
-            src="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
-            data-full="https://i.pinimg.com/originals/37/3e/76/373e7691ecf16e725e49890edbca1b57.jpg"
+            src="images/anime.jpeg"
+            data-full="images/anime.jpeg"
             class="img-fluid rounded shadow-sm thumb"
             alt="Манга 2"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
-            src="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
-            data-full="https://i.pinimg.com/736x/67/e8/f3/67e8f317b433e1c8f227b04a66a88077.jpg"
+            src="images/saturo.jpg"
+            data-full="images/saturo.jpg"
             class="img-fluid rounded shadow-sm thumb"
             alt="Манга 3"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
-            src="https://i.pinimg.com/originals/b5/95/cd/b595cd563f140140d5e8f97dbdf320fd.png"
-            data-full="https://i.pinimg.com/originals/b5/95/cd/b595cd563f140140d5e8f97dbdf320fd.png"
+            src="images/football.jpg"
+            data-full="images/football.jpg"
             class="img-fluid rounded shadow-sm thumb"
             alt="Манга 4"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
-            src="https://c8.alamy.com/comp/B0RY8N/cover-artwork-of-japanese-manga-comic-book-in-japan-B0RY8N.jpg"
-            data-full="https://c8.alamy.com/comp/B0RY8N/cover-artwork-of-japanese-manga-comic-book-in-japan-B0RY8N.jpg"
+            src="images/chef.jpeg"
+            data-full="images/chef.jpeg"
             class="img-fluid rounded shadow-sm thumb"
             alt="Манга 5"
           />
         </div>
         <div class="col-6 col-md-4 col-lg-2">
           <img
-            src="https://w0.peakpx.com/wallpaper/617/107/HD-wallpaper-berserk-french-cover-berserk-cover-art-manga.jpg"
-            data-full="https://w0.peakpx.com/wallpaper/617/107/HD-wallpaper-berserk-french-cover-berserk-cover-art-manga.jpg"
+            src="images/dragonballz.jpg"
+            data-full="images/dragonballz.jpg"
             class="img-fluid rounded shadow-sm thumb"
             alt="Манга 6"
           />
