--- a/catalog.html
+++ b/catalog.html
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Главная</a>
+              <a class="nav-link" href="index.html">Main</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="catalog.html">Каталог</a>
+              <a class="nav-link active" href="catalog.html">Catalog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Контакты</a>
+              <a class="nav-link" href="contact.html">Contacts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reviews.html">Отзывы</a>
+              <a class="nav-link" href="reviews.html">Reviews</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
@@ -53,12 +53,12 @@
         </div>
 
         <div class="d-flex align-items-center gap-2 ms-lg-3 mt-3 mt-lg-0">
-          <label class="text-white-50 small mb-0" for="langSelect">Язык</label>
+          <!-- <label class="text-white-50 small mb-0" for="langSelect">Язык</label>
           <select id="langSelect" class="form-select form-select-sm w-auto">
             <option value="ru" selected>RU</option>
             <option value="en">EN</option>
             <option value="kz">KZ</option>
-          </select>
+          </select> -->
 
           <!-- Dynamic Style Changes -->
           <button
@@ -67,7 +67,7 @@
             type="button"
             aria-pressed="false"
           >
-            🌙 Тема
+            🌙 Theme
           </button>
         </div>
       </div>
@@ -78,14 +78,14 @@
       <input
         id="searchInput"
         class="form-control mb-2"
-        placeholder="Поиск манги..."
+        placeholder="search..."
       />
       <ul id="suggestions" class="list-group position-absolute w-100"></ul>
     </div>
 
     <main class="flex-grow-1 py-5 bg-light">
       <div class="container">
-        <h2 class="text-center mb-4">Каталог Манги</h2>
+        <h2 class="text-center mb-4">Catalog of manga</h2>
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <!-- <div class="col">
@@ -149,7 +149,7 @@
     </main>
     <div class="text-center mb-4">
       <button id="loadMore" class="btn btn-outline-primary">
-        Показать ещё
+        Show more
       </button>
     </div>
     <!--  Footer  -->
