--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>MangaLib - Главная</title>
+    <title>MangaLib - Main</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -34,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto" id="mainNav">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Главная</a>
+              <a class="nav-link active" href="index.html">Main</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="catalog.html">Каталог </a>
+              <a class="nav-link" href="catalog.html">Catalog </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Контакты</a>
+              <a class="nav-link" href="contact.html">Contacts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reviews.html">Отзывы</a>
+              <a class="nav-link" href="reviews.html">Reviews</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="faq.html">FAQ</a>
@@ -52,14 +52,14 @@
 
           <!-- 2D: Switch Statement-->
           <div class="d-flex align-items-center gap-2 ms-lg-3 mt-3 mt-lg-0">
-            <label class="text-white-50 small mb-0" for="langSelect"
+            <!-- <label class="text-white-50 small mb-0" for="langSelect"
               >Язык</label
             >
             <select id="langSelect" class="form-select form-select-sm w-auto">
               <option value="ru" selected>RU</option>
               <option value="en">EN</option>
               <option value="kz">KZ</option>
-            </select>
+            </select> -->
 
             <!-- Dynamic Style Changes -->
             <button
@@ -68,7 +68,7 @@
               type="button"
               aria-pressed="false"
             >
-              🌙 Тема
+              🌙 Theme
             </button>
           </div>
         </div>
@@ -126,9 +126,9 @@
     <section class="container text-center my-5">
       <!-- Switch Statement
           -->
-      <h2 class="fw-bold" id="i18n-whatIsTitle">Что такое MangaLib?</h2>
+      <h2 class="fw-bold" id="i18n-whatIsTitle">What is mangalib?</h2>
       <p class="text-danger fw-semibold" id="i18n-whatIsSubtitle">
-        MangaLib — это ваша онлайн-библиотека манги.
+        MangaLib — online library of manga.
       </p>
       <img
         src="https://play-lh.googleusercontent.com/8TTnDwRV5-bxH4Rb_Nlfts1emEBeEpNuTWBP9KVJCJAmXW9jzXlDv0_aqOzjXIq5oQ-L"
@@ -143,7 +143,7 @@
          -->
     <section class="container my-5">
       <h2 class="text-center mb-4 fw-bold" id="i18n-whyTitle">
-        Почему выбирают MangaLib?
+        Why choose MangaLib?
       </h2>
 
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -155,10 +155,9 @@
               alt="Библиотека"
             />
             <div class="card-body">
-              <h5 class="card-title" id="i18n-card1Title">Большая коллекция</h5>
+              <h5 class="card-title" id="i18n-card1Title">Big collection</h5>
               <p class="card-text" id="i18n-card1Text">
-                Доступ к сотням популярных и редких манг на русском и английском
-                языках.
+                Allow access to 100+ mangas with different types and genres.
               </p>
             </div>
             <div class="card-footer text-center">
@@ -166,7 +165,7 @@
                 href="catalog.html"
                 class="btn btn-primary btn-sm"
                 id="i18n-card1Cta"
-                >Перейти</a
+                >Join</a
               >
             </div>
           </div>
@@ -181,11 +180,10 @@
             />
             <div class="card-body">
               <h5 class="card-title" id="i18n-card2Title">
-                Регулярные обновления
+                Regular updates
               </h5>
               <p class="card-text" id="i18n-card2Text">
-                Новые главы добавляются каждую неделю — следи за любимыми
-                историями.
+                New chapters are added as soon as they are released.
               </p>
             </div>
             <div class="card-footer text-center">
@@ -193,7 +191,7 @@
                 href="catalog.html"
                 class="btn btn-primary btn-sm"
                 id="i18n-card2Cta"
-                >Читать</a
+                >Read</a
               >
             </div>
           </div>
@@ -208,10 +206,10 @@
             />
             <div class="card-body">
               <h5 class="card-title" id="i18n-card3Title">
-                Активное сообщество
+                Active community
               </h5>
               <p class="card-text" id="i18n-card3Text">
-                Обсуждай мангу с другими читателями и оставляй свои отзывы.
+                Share your thoughts and read reviews from other manga lovers.
               </p>
             </div>
             <div class="card-footer text-center">
@@ -219,7 +217,7 @@
                 href="reviews.html"
                 class="btn btn-primary btn-sm"
                 id="i18n-card3Cta"
-                >Отзывы</a
+                >reviews</a
               >
             </div>
           </div>
@@ -229,7 +227,7 @@
 
     <!--  Gallery Grid -->
     <section class="container my-5">
-      <h2 class="text-center mb-4 fw-bold">Галерея Манги</h2>
+      <h2 class="text-center mb-4 fw-bold">Manga gallery</h2>
       <!-- Manipulating Attributes
            -->
       <div class="mb-3 text-center">
@@ -296,20 +294,20 @@
 
     <section class="stats-section text-center py-5 bg-white">
       <div class="container">
-        <h2 class="fw-bold mb-4">Наши достижения</h2>
+        <h2 class="fw-bold mb-4">Our achievements</h2>
         <div class="row">
           <div class="col-md-4">
             <h3>
-              <span class="count-num" data-target="1500">0</span> пользователей
+              <span class="count-num" data-target="1500">0</span> users
             </h3>
           </div>
           <div class="col-md-4">
             <h3>
-              <span class="count-num" data-target="320">0</span> манг в каталоге
+              <span class="count-num" data-target="320">0</span> mangas
             </h3>
           </div>
           <div class="col-md-4">
-            <h3><span class="count-num" data-target="85">0</span> отзывов</h3>
+            <h3><span class="count-num" data-target="85">0</span> reviews</h3>
           </div>
         </div>
       </div>
